# hands_on_rl

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/hands_on_rl/: MainActivity.kt
example/: bandit.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bandit.dart  estimate.dart  random.dart
lib/strategy/: greedy.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
python/: .gitignore  README.md  pyproject.toml
python/examples/: bandit.py  t.py
python/hands_on_rl/: bandit.py  bandit_estimate.py  bandit_figure.py  bandit_thompson.py  cliff_walking.py  figure.py  greedy.py  ucb.py
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
