[tool.poetry]
name = "hands-on-rl"
version = "0.1.0"
description = ""
authors = ["Dz <MathBeWithCode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.3.3"
matplotlib = "^3.10.6"
streamlit = "^1.50.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
